2011-10-28  Armando Basile  <hmandevteam@gmail.com>

	* comex-qt.sln:
	* comex-gtk.sln:
	* comex-qt.csproj:
	* AssemblyInfo.cs: - update release to 0.1.6.2

	* MainWindow.ui:
	* ResManager.cs:
	* MainWindow.cs:
	* AboutDialog.cs:
	* SettingsDialog.cs: - changed accelerator for close file

	* MainClass.cs: - removed unused old code

2011-09-13  Armando Basile  <hmandevteam@gmail.com>

	* comex-gtk.sln: - glade widgets init to null value (removed
	warning on build on windows)

2011-09-13  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.sln: - removed portname parameter in settings
	file

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex-qt.sln: - added license info in readme file
	- removed specific version reference to log4net, qt-dotnet and
	comex-base

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex-gtk.sln: - added license info in readme file
	- removed specific version reference to log4net and comex-base

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* comex.sln: - removed specific version requires for log4net
	and comex-base

2011-09-09  Armando Basile  <hmandevteam@gmail.com>

	* comex-base.sln: - updated version reference

2011-09-01  Armando Basile  <hmandevteam@gmail.com>

	* comex-qt.sln:
	* comex-gtk.sln:
	* comex-qt-solution.sln:
	* comex-gtk-solution.sln:
	* comex-qt/comex-qt.csproj:
	* comex-qt/Resources/comex-qt.desktop: - cleaning 

2011-08-12  hmandevteam  <hmandevteam@gmail.com>

	* comex-solution.sln: - improved multi language support
